2005-04-27  James Turner  <james@worldforge.org>

	* test/tests.cpp, test/commander.cpp, test/stubServer.h,
	  test/stubServer.cpp: add a test for sight of entity creation. 

2005-04-25  James Turner  <james@worldforge.org>

	* Eris/Factory.cpp, Eris/Factory.h, Eris/View.cpp, Eris/View.h: make
	  factories be owned by View, and hence have a well defined lifetime.
	  View now has a 'registerFactory' method, which can be called at any
	  time.

	* test/tests.cpp, test/stubServer.cpp: update entities and test the
	  setting status on an entity does not affect other attributes. This
	  test is currently failing.

2005-04-25  James Turner  <james@worldforge.org>

    * Eris/TypeInfo.cpp: fix 'processTypeData' to not add existing children
      to the unresolved set. Thanks to Erik again, he rocks.

    * Eris/TypeService.cpp: make the type verifier more tolerant of wonky
      objects (eg with parents unset but a valid objtype); warn instead of
      throwing.

2005-04-24  James Turner  <james@worldforge.org>

    * Eris/TypeInfo.cpp: in ::resolveChildren, copy the unresolved children
      set before iterating over it, since ::addChild() updates the set. Thanks
      to Erik for the catch.

2005-04-18  Al Riddoch  <alriddoch@zepler.org>

	* Release 1.3.4, Interface version 3.

2005-04-18  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment interface version correctly.

2005-04-17  James Turner  <james@worldforge.org>

	* Eris/Account.cpp: re-order code in loginError so loadtool works -
	  re-set status before emitting the signal, so slots which call login /
	  createAccount work as expected.
	 
	* Eris/Entity.cpp, Eris/Avatar.h, Eris/Avatar.cpp: make the Heard signal
	  on Avatar work.

2005-04-17  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp, Eris/Entity.h, Eris/EntityRouter.cpp: make onAction /
	  Acted pass the full Atlas::Objects::Operation::Action, instead of just
	  it's arg.
	  
	* Eris/Connection.cpp: remove debug output.
	  